# maximast

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  plugin-dev-manual.md  rules.md  skills.md  user-manual.md
.config/: nextest.toml
.github/workflows/: rust.yml
crates/core/: Cargo.toml
crates/eval/: Cargo.toml  build.rs
crates/eval/src/: bigfloat.rs  complex.rs  env.rs  eval.rs  expr_manip.rs  fourier.rs  gammafn.rs  genfunc.rs  gosper.rs  groebner.rs  gruntz.rs  help.rs  help.toml  helpers.rs  hypersum.rs  integrate.rs  laplace.rs  lib.rs  log_trig.rs  numeric.rs  numtheory.rs  ode.rs  pattern.rs  plot.rs  plugin.rs  poly_analysis.rs  poly_expr.rs  recurrence.rs  residue.rs  risch_integrate.rs  risch_norman.rs  risch_tower.rs  rootof.rs  series.rs  sets.rs  simp.rs  specfun_num.rs  special.rs  strings.rs  tex.rs  (+1 more)
crates/eval/src/assume/: database.rs  mod.rs  sign.rs
crates/eval/tests/: ac_bench.rs  ac_match_test.rs  algebraic_integrate_test.rs  benchmark.rs  bigfloat_test.rs  cardano_ferrari_test.rs  complex_test.rs  definite_special_test.rs  eigen_test.rs  eliminate_test.rs  euler_integrate_test.rs  exp_rational_test.rs  expr_manip_test.rs  factor_multivariate_test.rs  formula_test.rs  fourier_test.rs  groebner_test.rs  gruntz_stress.rs  ideal_arithmetic_test.rs  integrate_log_test.rs  laplace_test.rs  list_ops_test.rs  lrt_integrate_test.rs  makelist_test.rs  numtheory_test.rs  ode_test.rs  orthopoly_test.rs  package_system.rs  pattern_test.rs  plugin_test.rs  plugin_ux_test.rs  poly_logtrig_test.rs  poly_symbolic_test.rs  polysys_solve_test.rs  puiseux_test.rs  quad_radical_coeff_test.rs  quad_radical_test.rs  rational_coeff_test.rs  rational_float_test.rs  realroots_test.rs  (+14 more)
crates/parser/: Cargo.toml
crates/plugin-sdk/: Cargo.toml
crates/poly/: Cargo.toml
crates/repl/: Cargo.toml
crates/repl/src/: main.rs
lic/: LICENSE_ANALYSIS.md  all_licenses.txt  deps_raw.txt
plugins/bad_plugin/: Cargo.toml
plugins/bad_plugin/src/: lib.rs
plugins/orthopoly/: Cargo.toml
plugins/orthopoly/src/: lib.rs
plugins/specfun/: Cargo.toml
plugins/specfun/src/: lib.rs
plugins/template/: Cargo.toml
plugins/test_plugin/: Cargo.toml
research/: integralformulalist.toml
research/codereview/: code-review-v5.md
research/manuscript/: tech-report.md
research/survey/: ALGORITHM_SURVEY.md  FUTURE_SPRINTS.md
sprint/sprint-v1.0/: ALGORITHM_ROADMAP.md  OVERVIEW.md  PROGRESS.md  RC0_FOUNDATION.md  RC1_PARSER_EVALUATOR.md  RC2_SIMPLIFIER.md  RC3_ASSUMPTIONS.md  RC3_ASSUMPTIONS_v2.md  (+11 more)
tests/: rtestnset.mac
walkthrough/: 01_arithmetic.mac  02_algebra.mac  03_calculus.mac  04_solving.mac  05_limits.mac  06_matrices.mac  07_summation.mac  08_advanced_integration.mac  09_assumptions.mac  10_programming.mac  11_file_io.mac  12_plugin_api.mac  13_latex_output.mac  14_matrix_applications.mac  15_game_solver.mac  16_number_theory.mac  17_sets.mac  18_strings.mac  19_number_theory.mac  20_laplace.mac  21_ode.mac  22_complex.mac  23_trig_special.mac  24_matrix_arithmetic.mac  25_partfrac_advanced.mac  26_realroots.mac  27_pattern_matching.mac  28_bfloat.mac  29_plotting.mac  30_ac_matching.mac  31_symbolic_poly.mac  32_residues.mac  33_trig_advanced.mac  34_rust_plugins.mac  35_orthopoly.mac  36_specfun.mac  37_eight_queens.mac  38_queens_visualization.mac  39_polynomial_systems.mac  40_sudoku_visualize.mac  (+4 more)
(+50 files in other folders)
