[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/parser",
    "crates/eval",
    "crates/poly",
    "crates/repl",
    "crates/plugin-sdk",
    "plugins/template",
    "plugins/test_plugin",
    "plugins/orthopoly",
    "plugins/specfun",
    "plugins/bad_plugin",
]

[workspace.package]
version = "12.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
