[package]
name = "maxima-bad-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Malformed plugin fixture: missing maxima_plugin_register (error-path test)"

[lib]
crate-type = ["cdylib"]

[dependencies]
maxima-plugin = { path = "../../crates/plugin-sdk" }
