[package]
name = "maxima-specfun"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Special functions as a Maxima plugin (gamma, beta, erf, Bessel)"

[lib]
crate-type = ["cdylib"]

[dependencies]
maxima-plugin = { path = "../../crates/plugin-sdk" }
num = "0.4"
